# task_detector

./: .gitignore  CMakeLists.txt  package.xml
src/: main.cpp
src/classifier/: Classifier.cpp  Classifier.h  TaskFinder.cpp  TaskFinder.h
src/coordinate/: Coordinate.cpp  Coordinate.h
src/image/: ImageConverter.cpp  ImageConverter.h
src/utils/: CoordinateSmoother.cpp  CoordinateSmoother.h
